@@ -7,24 +7,29 @@ import cz.muni.ics.kypo.training.annotations.security.IsTraineeOrAdmin;
 import cz.muni.ics.kypo.training.annotations.transactions.TransactionalRO;
 import cz.muni.ics.kypo.training.annotations.transactions.TransactionalWO;
 import cz.muni.ics.kypo.training.api.dto.*;
-import cz.muni.ics.kypo.training.api.dto.accesslevel.AccessLevelDTO;
 import cz.muni.ics.kypo.training.api.dto.accesslevel.AccessLevelViewDTO;
 import cz.muni.ics.kypo.training.api.dto.assessmentlevel.AssessmentLevelDTO;
+import cz.muni.ics.kypo.training.api.dto.assessmentlevel.preview.AssessmentLevelPreviewDTO;
+import cz.muni.ics.kypo.training.api.dto.assessmentlevel.preview.QuestionPreviewDTO;
 import cz.muni.ics.kypo.training.api.dto.assessmentlevel.question.QuestionAnswerDTO;
 import cz.muni.ics.kypo.training.api.dto.hint.HintDTO;
+import cz.muni.ics.kypo.training.api.dto.infolevel.InfoLevelDTO;
 import cz.muni.ics.kypo.training.api.dto.run.AccessTrainingRunDTO;
 import cz.muni.ics.kypo.training.api.dto.run.AccessedTrainingRunDTO;
 import cz.muni.ics.kypo.training.api.dto.run.TrainingRunByIdDTO;
 import cz.muni.ics.kypo.training.api.dto.run.TrainingRunDTO;
 import cz.muni.ics.kypo.training.api.dto.traininglevel.LevelReferenceSolutionDTO;
+import cz.muni.ics.kypo.training.api.dto.traininglevel.TrainingLevelPreviewDTO;
 import cz.muni.ics.kypo.training.api.enums.Actions;
 import cz.muni.ics.kypo.training.api.enums.LevelType;
+import cz.muni.ics.kypo.training.api.enums.QuestionType;
 import cz.muni.ics.kypo.training.api.responses.PageResultResource;
 import cz.muni.ics.kypo.training.api.responses.VariantAnswer;
 import cz.muni.ics.kypo.training.mapping.mapstruct.*;
 import cz.muni.ics.kypo.training.persistence.model.*;
 import cz.muni.ics.kypo.training.persistence.model.AssessmentLevel;
 import cz.muni.ics.kypo.training.persistence.model.enums.TRState;
+import cz.muni.ics.kypo.training.persistence.model.question.QuestionAnswer;
 import cz.muni.ics.kypo.training.service.*;
 import cz.muni.ics.kypo.training.service.api.AnswersStorageApiService;
 import cz.muni.ics.kypo.training.service.api.TrainingFeedbackApiService;
@@ -35,6 +40,7 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.security.access.prepost.PreAuthorize;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -42,7 +48,6 @@ import java.time.Clock;
 import java.time.LocalDateTime;
 import java.util.*;
 import java.util.concurrent.TimeUnit;
-import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
@@ -248,19 +253,23 @@ public class TrainingRunFacade {
     private AccessTrainingRunDTO convertToAccessTrainingRunDTO(TrainingRun trainingRun) {
         AccessTrainingRunDTO accessTrainingRunDTO = new AccessTrainingRunDTO();
         accessTrainingRunDTO.setTrainingRunID(trainingRun.getId());
-        accessTrainingRunDTO.setAbstractLevelDTO(getCorrectAbstractLevelDTO(trainingRun.getCurrentLevel()));
+        accessTrainingRunDTO.setAbstractLevelDTO(getAbstractLevelDTO(trainingRun.getCurrentLevel()));
         accessTrainingRunDTO.setShowStepperBar(trainingRun.getTrainingInstance().getTrainingDefinition().isShowStepperBar());
         accessTrainingRunDTO.setInfoAboutLevels(getInfoAboutLevels(trainingRun.getCurrentLevel().getTrainingDefinition().getId()));
         accessTrainingRunDTO.setSandboxInstanceRefId(trainingRun.getSandboxInstanceRefId());
         accessTrainingRunDTO.setInstanceId(trainingRun.getTrainingInstance().getId());
         accessTrainingRunDTO.setStartTime(trainingRun.getStartTime());
         accessTrainingRunDTO.setLocalEnvironment(trainingRun.getTrainingInstance().isLocalEnvironment());
+        accessTrainingRunDTO.setBackwardMode(trainingRun.getTrainingInstance().isBackwardMode());
         accessTrainingRunDTO.setSandboxDefinitionId(trainingRun.getTrainingInstance().getSandboxDefinitionId());
+        accessTrainingRunDTO.setLevelAnswered(trainingRun.isLevelAnswered());
         if(trainingRun.getCurrentLevel().getClass() == AccessLevel.class) {
             replacePlaceholders(
                     (AccessLevelViewDTO) accessTrainingRunDTO.getAbstractLevelDTO(),
                     trainingRun.getTrainingInstance().getAccessToken(),
-                    trainingRun.getParticipantRef().getUserRefId()
+                    securityService.getBearerToken(),
+                    trainingRun.getParticipantRef().getUserRefId(),
+                    trainingRun.getTrainingInstance().getSandboxDefinitionId()
             );
         }
         return accessTrainingRunDTO;
@@ -274,6 +283,8 @@ public class TrainingRunFacade {
                 infoAboutLevels.add(new BasicLevelInfoDTO(abstractLevel.getId(), abstractLevel.getTitle(), LevelType.ASSESSMENT_LEVEL, abstractLevel.getOrder()));
             } else if (abstractLevel instanceof TrainingLevel) {
                 infoAboutLevels.add(new BasicLevelInfoDTO(abstractLevel.getId(), abstractLevel.getTitle(), LevelType.TRAINING_LEVEL, abstractLevel.getOrder()));
+            } else if (abstractLevel instanceof AccessLevel) {
+                infoAboutLevels.add(new BasicLevelInfoDTO(abstractLevel.getId(), abstractLevel.getTitle(), LevelType.ACCESS_LEVEL, abstractLevel.getOrder()));
             } else {
                 infoAboutLevels.add(new BasicLevelInfoDTO(abstractLevel.getId(), abstractLevel.getTitle(), LevelType.INFO_LEVEL, abstractLevel.getOrder()));
             }
@@ -324,14 +335,17 @@ public class TrainingRunFacade {
     @TransactionalWO
     public AbstractLevelDTO getNextLevel(Long trainingRunId) {
         TrainingRun trainingRun = trainingRunService.moveToNextLevel(trainingRunId);
-        AbstractLevelDTO abstractLevelDTO = getCorrectAbstractLevelDTO(trainingRun.getCurrentLevel());
+        AbstractLevelDTO abstractLevelDTO = getAbstractLevelDTO(trainingRun.getCurrentLevel());
         if (abstractLevelDTO.getClass() == AccessLevelViewDTO.class) {
             replacePlaceholders(
                     (AccessLevelViewDTO) abstractLevelDTO,
                     trainingRun.getTrainingInstance().getAccessToken(),
-                    trainingRun.getParticipantRef().getUserRefId()
+                    securityService.getBearerToken(),
+                    trainingRun.getParticipantRef().getUserRefId(),
+                    trainingRun.getTrainingInstance().getSandboxDefinitionId()
             );
         }
+        abstractLevelDTO.setTrainingDefinition(null);
         return abstractLevelDTO;
     }
 
@@ -475,6 +489,24 @@ public class TrainingRunFacade {
     }
 
     /**
+     * Gets visited level of given Training Run.
+     *
+     * @param trainingRunId id of Training Run whose visited level should be returned.
+     * @param levelId ID of the visited level.
+     * @return {@link AbstractLevelDTO}
+     */
+    @PreAuthorize("hasAuthority(T(cz.muni.ics.kypo.training.enums.RoleTypeSecurity).ROLE_TRAINING_ADMINISTRATOR)" +
+            "or @securityService.isTraineeOfGivenTrainingRun(#trainingRunId)")
+    @TransactionalWO
+    public AbstractLevelDTO getVisitedLevel(Long trainingRunId, Long levelId) {
+        AbstractLevel abstractLevel = trainingRunService.getVisitedLevel(trainingRunId, levelId);
+        TrainingRun trainingRun = trainingRunService.findById(trainingRunId);
+        AbstractLevelDTO abstractLevelDTO = getAbstractLevelPreviewDTO(abstractLevel, trainingRun);
+        abstractLevelDTO.setTrainingDefinition(null);
+        return abstractLevelDTO;
+    }
+
+    /**
      * Gets correct answers of the given Training Run.
      *
      * @param trainingRunId id of Training Run which current level gets hint for.
@@ -487,7 +519,7 @@ public class TrainingRunFacade {
         List<TrainingLevel> trainingLevels = trainingRunService.getLevels(trainingRun.getTrainingInstance().getTrainingDefinition().getId()).stream()
                 .filter(abstractLevel -> abstractLevel.getClass() == TrainingLevel.class)
                 .map(abstractLevel -> (TrainingLevel) abstractLevel)
-                .collect(Collectors.toList());
+                .toList();
         boolean isVariantSandboxes = trainingLevels.stream().anyMatch(TrainingLevel::isVariantAnswers);
         Map<String, String> variantAnswers = isVariantSandboxes ? getVariantAnswers(trainingRun.getSandboxInstanceRefId()) : new HashMap<>();
         return trainingLevels.stream()
@@ -564,33 +596,94 @@ public class TrainingRunFacade {
         }
     }
 
-    private AbstractLevelDTO getCorrectAbstractLevelDTO(AbstractLevel abstractLevel) {
+    private AbstractLevelDTO getAbstractLevelDTO(AbstractLevel abstractLevel) {
         AbstractLevelDTO abstractLevelDTO;
-        if (abstractLevel instanceof AssessmentLevel) {
-            AssessmentLevel assessmentLevel = (AssessmentLevel) abstractLevel;
+        if (abstractLevel instanceof AssessmentLevel assessmentLevel) {
             abstractLevelDTO = levelMapper.mapToAssessmentLevelDTO(assessmentLevel);
-            abstractLevelDTO.setLevelType(LevelType.ASSESSMENT_LEVEL);
             deleteInfoAboutCorrectnessFromQuestions((AssessmentLevelDTO) abstractLevelDTO);
-        } else if (abstractLevel instanceof TrainingLevel) {
-            TrainingLevel trainingLevel = (TrainingLevel) abstractLevel;
+        } else if (abstractLevel instanceof TrainingLevel trainingLevel) {
             abstractLevelDTO = levelMapper.mapToViewDTO(trainingLevel);
-            abstractLevelDTO.setLevelType(LevelType.TRAINING_LEVEL);
-        } else if (abstractLevel instanceof AccessLevel) {
-            AccessLevel accessLevel = (AccessLevel) abstractLevel;
+        } else if (abstractLevel instanceof AccessLevel accessLevel) {
             abstractLevelDTO = levelMapper.mapToViewDTO(accessLevel);
-            abstractLevelDTO.setLevelType(LevelType.ACCESS_LEVEL);
         } else {
             InfoLevel infoLevel = (InfoLevel) abstractLevel;
             abstractLevelDTO = levelMapper.mapToInfoLevelDTO(infoLevel);
-            abstractLevelDTO.setLevelType(LevelType.INFO_LEVEL);
         }
         return abstractLevelDTO;
     }
 
-    private void replacePlaceholders(AccessLevelViewDTO accessLevelViewDTO, String accessToken, Long userId) {
+    private AbstractLevelDTO getAbstractLevelPreviewDTO (AbstractLevel abstractLevel, TrainingRun trainingRun) {
+        if (abstractLevel instanceof InfoLevel infoLevel) {
+            return levelMapper.mapToInfoLevelDTO(infoLevel);
+        } else if (abstractLevel instanceof TrainingLevel trainingLevel) {
+            return mapToTrainingLevelPreviewDTO(trainingLevel, trainingRun);
+        } else if (abstractLevel instanceof AccessLevel accessLevel) {
+            return mapToAccessLevelViewDTO(accessLevel, trainingRun);
+        } else {
+            return mapToAssessmentLevelPreviewDTO((AssessmentLevel) abstractLevel, trainingRun);
+        }
+    }
+
+    private TrainingLevelPreviewDTO mapToTrainingLevelPreviewDTO(TrainingLevel trainingLevel, TrainingRun trainingRun) {
+        TrainingLevelPreviewDTO trainingLevelPreviewDTO = levelMapper.mapToPreviewDTO(trainingLevel);
+        trainingLevelPreviewDTO.setHints(hintMapper.mapToSetInfoDTO(trainingRun.getHintInfoList().stream()
+                .filter(hintInfo ->  hintInfo.getTrainingLevelId().equals(trainingLevel.getId()))
+                .toList())
+        );
+        String takenSolution = trainingRun.getSolutionInfoList().stream()
+                .filter(solutionInfo -> trainingLevel.getId().equals(solutionInfo.getTrainingLevelId()))
+                .map(SolutionInfo::getSolutionContent)
+                .findFirst().orElse(null);
+        trainingLevelPreviewDTO.setSolution(takenSolution);
+        return trainingLevelPreviewDTO;
+    }
+
+    private AccessLevelViewDTO mapToAccessLevelViewDTO(AccessLevel accessLevel, TrainingRun trainingRun) {
+        AccessLevelViewDTO accessLevelViewDTO = levelMapper.mapToViewDTO(accessLevel);
+        replacePlaceholders(
+                accessLevelViewDTO,
+                trainingRun.getTrainingInstance().getAccessToken(),
+                securityService.getBearerToken(),
+                trainingRun.getParticipantRef().getUserRefId(),
+                trainingRun.getTrainingInstance().getSandboxDefinitionId()
+        );
+        return accessLevelViewDTO;
+    }
+
+    private AssessmentLevelPreviewDTO mapToAssessmentLevelPreviewDTO(AssessmentLevel assessmentLevel, TrainingRun trainingRun) {
+        Map<Long, Set<String>> userAnswersByQuestionId = trainingRunService.getQuestionAnswersByTrainingRunId(trainingRun.getId()).stream()
+                .collect(Collectors.toMap(q -> q.getQuestion().getId(), QuestionAnswer::getAnswers));
+        AssessmentLevelPreviewDTO assessmentPreviewDTO = levelMapper.mapToAssessmentLevelPreviewDTO(assessmentLevel);
+        assessmentPreviewDTO.getQuestions().forEach(previewQuestionDTO -> {
+            if (previewQuestionDTO.getQuestionType() == QuestionType.EMI) {
+                Set<String> emiAnswers = userAnswersByQuestionId.getOrDefault(previewQuestionDTO.getId(), new HashSet<>());
+                emiAnswers.stream()
+                        .map(this::convertEmiAnswerToMap)
+                        .forEach(emiAnswerMap -> previewQuestionDTO.getExtendedMatchingStatements().get(emiAnswerMap.get("statementOrder")).setUserOptionOrder(emiAnswerMap.get("optionOrder")));
+            } else {
+                if (previewQuestionDTO.getQuestionType() == QuestionType.FFQ) {
+                    previewQuestionDTO.setChoices(new ArrayList<>());
+                }
+                previewQuestionDTO.setUserAnswers(userAnswersByQuestionId.get(previewQuestionDTO.getId()));
+            }
+        });
+        return assessmentPreviewDTO;
+    }
+
+    private Map<String, Integer> convertEmiAnswerToMap(String emiAnswer) {
+        emiAnswer = emiAnswer.replaceAll("\"", "");
+        emiAnswer = emiAnswer.substring(1, emiAnswer.length() -1);
+        return Arrays.stream( emiAnswer.split(",") )
+                .map(s -> s.split(":"))
+                .collect(Collectors.toMap(s -> s[0].trim(), s -> Integer.parseInt(s[1].trim())));
+    }
+
+    private void replacePlaceholders(AccessLevelViewDTO accessLevelViewDTO, String accessToken, String bearerToken, Long userId, Long sandboxDefinitionId) {
         String localContent = accessLevelViewDTO.getLocalContent();
         localContent = localContent.replaceAll("\\$\\{ACCESS_TOKEN\\}", accessToken);
+        localContent = localContent.replaceAll("\\$\\{BEARER_TOKEN\\}", bearerToken);
         localContent = localContent.replaceAll("\\$\\{USER_ID\\}", userId.toString());
+        localContent = localContent.replaceAll("\\$\\{SANDBOX_DEFINITION_ID\\}", sandboxDefinitionId.toString());
         localContent = localContent.replaceAll("\\$\\{CENTRAL_SYSLOG_IP\\}", centralSyslogIp);
         accessLevelViewDTO.setLocalContent(localContent);
     }
@@ -601,6 +694,7 @@ public class TrainingRunFacade {
             questionDTO.getExtendedMatchingStatements().forEach(statementDTO -> statementDTO.setCorrectOptionOrder(null));
         });
     }
+
     private void waitToPropagateEvents() {
         try {
             TimeUnit.SECONDS.sleep(TIME_TO_PROPAGATE_EVENTS);
